--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<head>
 
-		<title>Mike Fitch, Horrible Cop</title>
+		<title>Mike Fitch, Welcome to my world Cop</title>
 
 		<!-- link to main stylesheet -->
 
